--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Sigelo",
-    "slug": "Sigelo",
-    "version": "1.2.1",
+    "name": "Sigelo Pass",
+    "slug": "sigelo-pass",
+    "version": "1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
